--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,11 @@
 sonar.projectName=aagirre-windows-msbuild-vscoverage-gh-actions-sc
 sonar.projectKey=aagirre-windows-msbuild-vscoverage-gh-actions-sc
-sonar.organization=orona-examples
+#sonar.organization=orona-examples
+sonar.organization=sonarsource-cfamily-examples
 sonar.projectVersion=1.0
 
-sonar.host.url=https://sonarit.orona.es/
-sonar.login=sqp_5b5cd8dd376f5058c637cb2c3bd60584924edba7
+#sonar.host.url=https://sonarit.orona.es/
+#sonar.login=sqp_5b5cd8dd376f5058c637cb2c3bd60584924edba7
 
 # =====================================================
 #   Properties that will be shared amongst all modules
