--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,9 @@ jobs:
           Get-Content C:\Windows\System32\drivers\etc\hosts
 
       # Add this step to check network connectivity
-      # - name: Check connectivity to SonarQube server
-      #   run: curl -v https://sonarit.orona.es
+       - name: Check connectivity to SonarQube server
+         run: curl -v https://sonarcloud.io
+         #run: curl -v https://sonarit.orona.es
 
       - name: Set up msbuild
         uses: microsoft/setup-msbuild@v2
@@ -63,7 +64,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }} # Put the name of your token here
           #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Put the name of your token here
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SONAR_HOST_URL: ${{ secrets.SONARCLOUD_HOST_URL }}
+          #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          
         run: >
           sonar-scanner 
           --define sonar.cfamily.compile-commands="${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json"
