--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }} # Put the name of your token here
           #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Put the name of your token here
-          SONAR_HOST_URL: ${{ secrets.SONARCLOUD_HOST_URL }}
+          #SONAR_HOST_URL: ${{ secrets.SONARCLOUD_HOST_URL }}
+          SONAR_HOST_URL: https://sonarcloud.io
           #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           
         run: >
