--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,8 @@ jobs:
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }} # Put the name of your token here
+          #SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }} # Put the name of your token here
+          SONAR_TOKEN: e15bb6ad01d1ddc56c8563b03bc2e2e09e85f6e1
           #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Put the name of your token here
           #SONAR_HOST_URL: ${{ secrets.SONARCLOUD_HOST_URL }}
           SONAR_HOST_URL: https://sonarcloud.io
