use SONAR_TOKEN secret and update organization and key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
 sonar.projectName=aagirre-windows-msbuild-vscoverage-gh-actions-sc
-sonar.projectKey=aagirre-windows-msbuild-vscoverage-gh-actions-sc
+
+sonar.projectKey=aagirre_aagirre-windows-msbuild-vscoverage-gh-actions-sc
 #sonar.organization=orona-examples
-sonar.organization=Aitor Agirre
+sonar.organization=aagirre
 sonar.projectVersion=1.0
 
 #sonar.host.url=https://sonarit.orona.es/
