--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,14 +61,10 @@ jobs:
 
       - name: Run sonar-scanner
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          #SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }} # Put the name of your token here
-          #SONAR_TOKEN: e15bb6ad01d1ddc56c8563b03bc2e2e09e85f6e1
+          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Put the name of your token here
-          #SONAR_HOST_URL: ${{ secrets.SONARCLOUD_HOST_URL }}
           SONAR_HOST_URL: https://sonarcloud.io
-          #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          
+                    
         run: >
           sonar-scanner 
           --define sonar.cfamily.compile-commands="${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json"
