test to see if sonar host url can be set in sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectName=aagirre-windows-msbuild-vscoverage-gh-actions-sc
 sonar.projectKey=aagirre_aagirre-windows-msbuild-vscoverage-gh-actions-sc
 sonar.organization=aagirre
 sonar.projectVersion=1.0
+sonar.host.url=https://sonarcloud.io/
 
 # =====================================================
 #   Properties that will be shared amongst all modules
